JMC.Parser/grammars/.antlr/JMCParser.java
// Generated from c:/Users/User/source/repos/JMC/JMC.Parser/grammars/JMCParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JMCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SIMPLE_ADDICTIVE=1, MULTIPACATION=2, ADDICTIVE=3, COMPARATOR=4, COMPARASION=5, 
		ASSIGN=6, ASSIGN_OPERATORS=7, ARROW=8, BLOCK_START=9, BLOCK_END=10, LIST_START=11, 
		LIST_END=12, PAREN_START=13, PAREN_END=14, COLON=15, IMPLY=16, SELECTOR=17, 
		RUN=18, IMPORT=19, FUNCTION=20, WHILE=21, IF=22, ELSE=23, END=24, SEP=25, 
		NOT=26, COMMENT=27, COMMANDS=28, INTEGER=29, INT_VALUE=30, FLOAT=31, STRING=32, 
		BOOL=33, NULL=34, NUMBER=35, WS=36, VARIABLE_IDENTIFIER=37, IDENTIFIER=38;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_ifBlock = 3, 
		RULE_elseIfBlock = 4, RULE_whileBlock = 5, RULE_functionBlock = 6, RULE_block = 7, 
		RULE_attrbinbuteAssign = 8, RULE_attributeJson = 9, RULE_import_ = 10, 
		RULE_assignment = 11, RULE_functionCall = 12, RULE_funcArgs = 13, RULE_expArgs = 14, 
		RULE_specifiedArgs = 15, RULE_specifiedArg = 16, RULE_command = 17, RULE_expression = 18, 
		RULE_constant = 19, RULE_assign = 20, RULE_scoreboardTarget = 21, RULE_implyTarget = 22, 
		RULE_commandExtend = 23, RULE_anonymousFunction = 24, RULE_list = 25, 
		RULE_listElems = 26, RULE_listElem = 27, RULE_jsonObj = 28, RULE_jsonObjPairs = 29, 
		RULE_jsonPair = 30, RULE_jsonList = 31, RULE_jsonElems = 32, RULE_jsonValue = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "statement", "ifBlock", "elseIfBlock", "whileBlock", 
			"functionBlock", "block", "attrbinbuteAssign", "attributeJson", "import_", 
			"assignment", "functionCall", "funcArgs", "expArgs", "specifiedArgs", 
			"specifiedArg", "command", "expression", "constant", "assign", "scoreboardTarget", 
			"implyTarget", "commandExtend", "anonymousFunction", "list", "listElems", 
			"listElem", "jsonObj", "jsonObjPairs", "jsonPair", "jsonList", "jsonElems", 
			"jsonValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'='", null, "'=>'", "'{'", "'}'", 
			"'['", "']'", "'('", "')'", "':'", "'::'", null, "'run'", "'import'", 
			"'function'", "'while'", "'if'", "'else'", "';'", "','", "'!'", null, 
			null, null, null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SIMPLE_ADDICTIVE", "MULTIPACATION", "ADDICTIVE", "COMPARATOR", 
			"COMPARASION", "ASSIGN", "ASSIGN_OPERATORS", "ARROW", "BLOCK_START", 
			"BLOCK_END", "LIST_START", "LIST_END", "PAREN_START", "PAREN_END", "COLON", 
			"IMPLY", "SELECTOR", "RUN", "IMPORT", "FUNCTION", "WHILE", "IF", "ELSE", 
			"END", "SEP", "NOT", "COMMENT", "COMMANDS", "INTEGER", "INT_VALUE", "FLOAT", 
			"STRING", "BOOL", "NULL", "NUMBER", "WS", "VARIABLE_IDENTIFIER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JMCParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JMCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JMCParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 412727508992L) != 0)) {
				{
				{
				setState(68);
				line();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public Import_Context import_() {
			return getRuleContext(Import_Context.class,0);
		}
		public TerminalNode COMMENT() { return getToken(JMCParser.COMMENT, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				ifBlock();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				whileBlock();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				functionBlock();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				import_();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				match(COMMENT);
				}
				break;
			case SELECTOR:
			case COMMANDS:
			case VARIABLE_IDENTIFIER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(JMCParser.END, 0); }
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public AttrbinbuteAssignContext attrbinbuteAssign() {
			return getRuleContext(AttrbinbuteAssignContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECTOR:
			case VARIABLE_IDENTIFIER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(84);
					functionCall();
					}
					break;
				case 2:
					{
					setState(85);
					attrbinbuteAssign();
					}
					break;
				case 3:
					{
					setState(86);
					assignment();
					}
					break;
				}
				setState(89);
				match(END);
				}
				}
				break;
			case COMMANDS:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfBlockContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(JMCParser.IF, 0); }
		public TerminalNode PAREN_START() { return getToken(JMCParser.PAREN_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAREN_END() { return getToken(JMCParser.PAREN_END, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(JMCParser.ELSE, 0); }
		public ElseIfBlockContext elseIfBlock() {
			return getRuleContext(ElseIfBlockContext.class,0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBlock; }
	}

	public final IfBlockContext ifBlock() throws RecognitionException {
		IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(IF);
			setState(95);
			match(PAREN_START);
			setState(96);
			expression(0);
			setState(97);
			match(PAREN_END);
			setState(98);
			block();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(99);
				match(ELSE);
				setState(100);
				elseIfBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseIfBlockContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public ElseIfBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseIfBlock; }
	}

	public final ElseIfBlockContext elseIfBlock() throws RecognitionException {
		ElseIfBlockContext _localctx = new ElseIfBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elseIfBlock);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BLOCK_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				block();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				ifBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileBlockContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(JMCParser.WHILE, 0); }
		public TerminalNode PAREN_START() { return getToken(JMCParser.PAREN_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAREN_END() { return getToken(JMCParser.PAREN_END, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileBlock; }
	}

	public final WhileBlockContext whileBlock() throws RecognitionException {
		WhileBlockContext _localctx = new WhileBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whileBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(WHILE);
			setState(108);
			match(PAREN_START);
			setState(109);
			expression(0);
			setState(110);
			match(PAREN_END);
			setState(111);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBlockContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(JMCParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JMCParser.IDENTIFIER, 0); }
		public TerminalNode PAREN_START() { return getToken(JMCParser.PAREN_START, 0); }
		public TerminalNode PAREN_END() { return getToken(JMCParser.PAREN_END, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FunctionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBlock; }
	}

	public final FunctionBlockContext functionBlock() throws RecognitionException {
		FunctionBlockContext _localctx = new FunctionBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(FUNCTION);
			setState(114);
			match(IDENTIFIER);
			setState(115);
			match(PAREN_START);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 445133105152L) != 0)) {
				{
				{
				setState(116);
				expression(0);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(PAREN_END);
			setState(123);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BLOCK_START() { return getToken(JMCParser.BLOCK_START, 0); }
		public TerminalNode BLOCK_END() { return getToken(JMCParser.BLOCK_END, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(BLOCK_START);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 412727508992L) != 0)) {
				{
				{
				setState(126);
				line();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrbinbuteAssignContext extends ParserRuleContext {
		public TerminalNode SELECTOR() { return getToken(JMCParser.SELECTOR, 0); }
		public TerminalNode IMPLY() { return getToken(JMCParser.IMPLY, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public AttributeJsonContext attributeJson() {
			return getRuleContext(AttributeJsonContext.class,0);
		}
		public AttrbinbuteAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrbinbuteAssign; }
	}

	public final AttrbinbuteAssignContext attrbinbuteAssign() throws RecognitionException {
		AttrbinbuteAssignContext _localctx = new AttrbinbuteAssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attrbinbuteAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(SELECTOR);
			setState(135);
			match(IMPLY);
			setState(136);
			assign();
			setState(137);
			attributeJson();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeJsonContext extends ParserRuleContext {
		public JsonObjContext jsonObj() {
			return getRuleContext(JsonObjContext.class,0);
		}
		public AttributeJsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeJson; }
	}

	public final AttributeJsonContext attributeJson() throws RecognitionException {
		AttributeJsonContext _localctx = new AttributeJsonContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attributeJson);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			jsonObj();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_Context extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JMCParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(JMCParser.STRING, 0); }
		public TerminalNode END() { return getToken(JMCParser.END, 0); }
		public Import_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_; }
	}

	public final Import_Context import_() throws RecognitionException {
		Import_Context _localctx = new Import_Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_import_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(IMPORT);
			setState(142);
			match(STRING);
			setState(143);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode VARIABLE_IDENTIFIER() { return getToken(JMCParser.VARIABLE_IDENTIFIER, 0); }
		public ScoreboardTargetContext scoreboardTarget() {
			return getRuleContext(ScoreboardTargetContext.class,0);
		}
		public TerminalNode SIMPLE_ADDICTIVE() { return getToken(JMCParser.SIMPLE_ADDICTIVE, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE_IDENTIFIER:
				{
				setState(145);
				match(VARIABLE_IDENTIFIER);
				}
				break;
			case IDENTIFIER:
				{
				setState(146);
				scoreboardTarget();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIMPLE_ADDICTIVE:
				{
				setState(149);
				match(SIMPLE_ADDICTIVE);
				}
				break;
			case COMPARATOR:
			case ASSIGN:
			case ASSIGN_OPERATORS:
				{
				{
				setState(150);
				assign();
				setState(151);
				expression(0);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JMCParser.IDENTIFIER, 0); }
		public TerminalNode PAREN_START() { return getToken(JMCParser.PAREN_START, 0); }
		public TerminalNode PAREN_END() { return getToken(JMCParser.PAREN_END, 0); }
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(IDENTIFIER);
			setState(156);
			match(PAREN_START);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 445133105152L) != 0)) {
				{
				setState(157);
				funcArgs();
				}
			}

			setState(160);
			match(PAREN_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncArgsContext extends ParserRuleContext {
		public ExpArgsContext expArgs() {
			return getRuleContext(ExpArgsContext.class,0);
		}
		public TerminalNode SEP() { return getToken(JMCParser.SEP, 0); }
		public SpecifiedArgsContext specifiedArgs() {
			return getRuleContext(SpecifiedArgsContext.class,0);
		}
		public FuncArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgs; }
	}

	public final FuncArgsContext funcArgs() throws RecognitionException {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_funcArgs);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(162);
				expArgs();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEP) {
					{
					setState(163);
					match(SEP);
					setState(164);
					specifiedArgs();
					}
				}

				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				specifiedArgs();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpArgsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(JMCParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(JMCParser.SEP, i);
		}
		public ExpArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expArgs; }
	}

	public final ExpArgsContext expArgs() throws RecognitionException {
		ExpArgsContext _localctx = new ExpArgsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_expArgs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			expression(0);
			setState(175);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(171);
					match(SEP);
					setState(172);
					expression(0);
					}
					} 
				}
				setState(177);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecifiedArgsContext extends ParserRuleContext {
		public List<SpecifiedArgContext> specifiedArg() {
			return getRuleContexts(SpecifiedArgContext.class);
		}
		public SpecifiedArgContext specifiedArg(int i) {
			return getRuleContext(SpecifiedArgContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(JMCParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(JMCParser.SEP, i);
		}
		public SpecifiedArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specifiedArgs; }
	}

	public final SpecifiedArgsContext specifiedArgs() throws RecognitionException {
		SpecifiedArgsContext _localctx = new SpecifiedArgsContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_specifiedArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			specifiedArg();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(179);
				match(SEP);
				setState(180);
				specifiedArg();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecifiedArgContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JMCParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(JMCParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SpecifiedArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specifiedArg; }
	}
